--- a/Backend/MovieApi/Api/appsettings.json
+++ b/Backend/MovieApi/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-Q7HN3E8;Database=Movie;User Id=sa;Password=invatu1234;"
+    "DefaultConnection": "Server=DESKTOP-Q7HN3E8;Database=MovieDb;User Id=sa;Password=invatu1234;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
